# pcto-manager

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env  .env.example  Dockerfile  Makefile  dev.db  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_school_branding_export.py  0003_classroom_year_section.py  0004_project_fields.py  0005_session_topic.py  0006_project_total_hours_session_status.py  0007_classroom_unique_dedup.py  0008_student_pcto_required_hours.py  0009_project_class_id.py
backend/app/: db.py  main.py  seed.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  models.py
backend/tests/: conftest.py  test_attendance_read.py  test_branding_export.py  test_classes_students.py  test_classroom_migration_dedup.py  test_pcto_vertical.py  test_project_class_migration.py  test_project_update.py  test_sessions_crud.py  test_students_crud.py  test_tenant_guard.py  test_tenant_isolation.py  utils.py
docs/: 00-vision.md  01-prd.md  02-domain-model.yaml  03-api-spec.yaml  04-rbac.yaml  05-flows.md  06-db-schema.md  07-test-plan.md  08-export-spec.md  09-ui-reference.md  10-ui-components.md  11-ui-navigation.md  12-architecture.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: app-shell.tsx  empty-state.tsx  page-header.tsx  school-badge.tsx  section-container.tsx  sidebar.tsx  skeletons.tsx  status-chip.tsx  topbar.tsx
(+31 files in other folders)
